# computer_vision

./: .gitignore  CMakeLists.txt  README.md  detector.py  report.tex  requirements.txt
include/: person_detector.hpp  utils.hpp
src/: main.cpp  person_detector.cpp  utils.cpp
